--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -69,6 +69,34 @@
 .structure {
     width: 20px;
 }
+
+/* Awal Magazine */
+.corner h1 {
+    font-size: 64;
+    font-weight: 700;
+}
+
+.corner h1 span {
+    color: #17B7E9;
+}
+
+.corner p {
+    font-size: 36;
+    font-weight: 700;
+}
+
+.majalah p {
+    font-size: 18;
+    font-weight: 600;
+}
+/* Akhir Magazine */
+
+.footer {
+    background-color: #C2C2C2;
+    
+}
+
+
 @media (min-width: 580px) and (max-width: 991px) {
 .line {
     width: 40%;
