--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,22 +1,3 @@
-.btn-upload {
-    background-color: #02394A;
-    width: 179px;
-    height: 55px;
-    border-radius: 20px;
-    color: #fff;
-}
-.navbar-nav li {
-    margin-right: 15px;
-}
-
-
-.isi-1 {
-    color: #17B7E9;
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 20px;
-}
-
 .foto-panorama {
 
     max-width: 80%;
@@ -96,11 +77,6 @@
 }
 /* Akhir Magazine */
 
-.footer {
-    background-color: #C2C2C2;
-    
-}
-
 
 @media (min-width: 580px) and (max-width: 991px) {
 .line {
@@ -119,6 +95,9 @@
     display: none;
 }
 
+.organization img {
+   
+}
 /* .organization img {
     display: none;
 } */
