--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,6 +47,70 @@ body {}
 }
 
 
+/* Awal Panorama foto ketiga atas */
+.foto-panorama {
+    max-width: 80%;
+    margin-top: 40px;
+    max-height: 500px;
+    width: 30vw;
+}
+
+#foto-kedua {
+    margin-top: 15%;
+    margin-left: 3px;
+}
+
+.foto-ketiga {
+    margin-top: 40px;
+    max-height: 500px;
+    width: 30vw;
+}
+/* Akhir Panorama foto ketiga atas */
+
+
+/* Awal about */
+.about {
+    margin-top: 40px;
+}
+
+.about h1 span {
+    color: #17B7E9;
+}
+/* Akhir about */
+
+/* Awal organization */
+.organization h1 span {
+    color: #17B7E9;
+}
+
+.organization img {
+    max-width: 100%;
+    height: auto;
+}
+
+.structure {
+    width: 20px;
+}
+/* Akhir organization */
+
+
+/* Awal line */
+
+.line{
+    width: 47%;
+    height: 5px;
+    background-color: black;
+    margin-bottom: 20px;
+}
+
+.line-color {
+    background-color: #17B7E9;
+    width: 100%;
+    height: 5px;
+    margin-bottom: 20px;
+}
+/* Akhir line */
+
 /* gallery */
 
 .gallery {
@@ -124,12 +188,17 @@ svg {
     color: #17B7E9;
 }
 
+.link-light {
+    text-decoration: none;
+    
+}
+
 @media (max-width: 575.98px) and (max-width:768px) {
-    .mx-auto {
+    .artikel-bg {
         position: relative;
-        background-color: #02394A !important;
+        background-color: #02394A !important; /* ini yg error */
         height: 100%;
-        min-height: 220vh;
+        min-height: 220vh;      /* ini yg error */
         display: flex;
         justify-content: center;
     }
@@ -163,11 +232,12 @@ svg {
         display: none;
         background-color: transparent;
     }
-    button {
+    #btn-magazine {
         text-align: center;
-        width: 50%;
+        width: 70%;  
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 20%;
     }
     #item-footer {
         text-align: center;
@@ -183,4 +253,27 @@ svg {
         display: flex;
         justify-content: center;
     }
+    .foto-panorama img{
+        display: none;
+    }
+    
+    .line {
+        display: none;
+    }
+    .line-3 {
+        display: none;
+    }
+    .line-color {
+        display: none;
+    }
+    .line-custom {
+        display: none;
+    }
+        
+    .btn-upload{
+        margin-top: 10px;
+        width: 100%;
+        height: 45px;
+}
+    
 }
