--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,5 +1,5 @@
 .btn-upload {
-    background-color: #02394A;
+    background-color: #17B7E9;
     width: 179px;
     height: 55px;
     border-radius: 20px;
