--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -242,7 +242,7 @@ svg {
         background-color: #02394A !important;
         /* ini yg error */
         height: 100%;
-        min-height: 220vh;
+        /* min-height: 220vh; */
         /* ini yg error */
         display: flex;
         justify-content: center;
@@ -269,12 +269,11 @@ svg {
         text-align: center !important;
     }
     #gallery-header {
-        font-size: 60px;
         font-weight: bold;
         height: 10px;
-        margin-bottom: 40px;
-        margin-top: 20% !important;
+        margin-top: 10% !important;
         text-align: center !important;
+        display: block;
     }
     .bg-gallery {
         display: none;
@@ -282,7 +281,7 @@ svg {
     }
     #btn-magazine {
         text-align: center;
-        width: 70%;
+        width: 30%;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20%;
