--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,15 +3,18 @@
     position: relative;
 }
 
+svg {
+    color: #17B7E9;
+}
+
 footer {
-    font-family: "Raleway";
     max-height: 10%;
     position: relative;
     background-color: #FAFCFF;
 }
 
 .kontak {
-    font-weight: bold;
+    /* font-weight: bold; */
     color: #02394A;
     font-size: 15px;
 }
