--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -4,6 +4,10 @@
     height: 55px;
     border-radius: 20px;
     color: #fff;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
 }
 
 .navbar-nav li {
